--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -49,6 +49,7 @@
 .hero .button {
     width: 300px;
     margin: 1rem 0;
+    color: #333;
     background-color: var(--secondary-color);
     border: 1px solid var(--secondary-color);
 }
