--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -7,6 +7,7 @@
     transition: .3s ease-in;
     overflow: hidden;
     z-index: 1;
+    background-color: rgba(0,0,0, .9);
 }
 
 .header .navbar {
